# XPlanePluginBuilder-Docker

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
